# figma-mcp

./: .gitignore  README.md  pyproject.toml
figma_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
plugin/: build.mjs  manifest.json  package-lock.json  package.json  tsconfig.json
plugin/src/: code.ts  ui.ts
server/: auth.py  http_routes.py  job_queue.py  main.py  mcp_tools.py  ops_schema.py
